# Launcheroo

./: .gitignore  CMakeLists.txt  README.md
android/src/com/qaap/letihome/: LetiHome.java
cpp/: CMakeLists.txt  iconprovider.cpp  iconprovider.hpp  main.cpp  platform.cpp  platform.h  platform.hpp  xdgiconloader.cpp  xdgiconloader_p.h
qml/: main.qml
